<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/top_action_bar_height"
    android:paddingStart="@dimen/top_action_bar_padding_horizontal"
    android:paddingEnd="@dimen/top_action_bar_padding_horizontal"
    android:background="@drawable/top_action_bar_scrim">

  <ImageView
      android:id="@+id/close_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_centerInParent="true"
      android:padding="@dimen/top_action_button_padding"
      android:contentDescription="@string/cd_close_button"
      app:srcCompat="@drawable/ic_keyboard_arrow_left_white_32_dp"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:gravity="center_vertical"
      android:text="@string/videtection"
      android:fontFamily="@font/lato_medium"
      android:textSize="@dimen/top_bar_text_size"/>

  <ImageView
      android:id="@+id/photo_library_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_centerInParent="true"
      android:padding="@dimen/top_action_button_padding"
      android:contentDescription="@string/cd_photo_library_button"
      app:srcCompat="@drawable/ic_album_white_24_dp"/>

</RelativeLayout>
